# RefinedARXML

./: .gitignore  ARXMLEditor.spec  DIAGRAM_TOGGLE_IMPLEMENTATION.md  Dockerfile  HIERARCHY_IMPLEMENTATION_SUMMARY.md  HIERARCHY_VISUALIZATION.md  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.3.md  WAYLAND_FIX_SUMMARY.md  WINDOW_DECORATIONS_FIX.md  arxml-editor.desktop  build_windows.py  build_windows_package.py  build_windows_package_debug.py  build_windows_package_debug_simple.py  build_windows_package_debug_v2.py  build_windows_package_simple.py  build_windows_release.py  build_windows_tkinter.py  build_windows_tkinter_full.py  build_windows_tkinter_full_simple.py  build_windows_tkinter_simple.py  create_icon.py  demo_hierarchy.py  docker-compose.yml  fix_display_issues.py  launch_editor.py  launch_editor.sh  launch_editor_stable.py  launch_editor_wayland.py  sample.arxml  setup_environment.sh  test_complete_application.py  test_diagram_toggle.py  test_display.py  test_hierarchy_debug.py  test_hierarchy_fix.py  test_hierarchy_view.py  test_hierarchy_visual.py  (+4 more)
ARXMLEditor-Windows-Build-Package/: ARXMLEditor_Windows.spec  BUILD_INSTRUCTIONS.md  README.md  START_BUILD.bat  build_windows.bat  build_windows.ps1  create_release_package.bat  gui_compatibility.py  gui_framework_detector.py  install_gui_framework.py  main_compatible.py  pyproject.toml  requirements.txt  requirements_windows.txt  run_editor.py  setup.py
ARXMLEditor-Windows-Build-Package/arxml_editor/: main.py
ARXMLEditor-Windows-Build-Package/tests/: __init__.py  test_arxml_model.py
(+60 files in other folders)
