[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxml-editor"
version = "0.1.0"
description = "Professional ARXML Editor with AUTOSAR compliance and advanced validation"
authors = [{name = "ARXML Editor Team", email = "team@arxml-editor.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6.0",
    "autosar-data>=0.1.0",
    "lxml>=4.9.0",
    "xmlschema>=3.0.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100